+ Added a menu option for logged in users to send their Steam collection info to IsThereAnyDeal.com
: Fixed a bug that caused tags not to display correctly on wishlist pages
: Fixed bugs relating to changes Valve made in the badge page layout
: Updated Greenlight caching to be more efficient
: Fixed a tag layout issue on the homepage


v7.9.2
-----
: Fixed layout issues with the market page

v7.9.1
-----
: Links on app pages to SteamDB, PCGW, and SCE will display at the top of the right column
: Continuous scrolling was updated and will now reset after changing the search sort order
: Homepage carousel will now properly display escaped HTML characters
: Updated Early Access banners to run more efficiently
: Relisting a market item can now be done quickly by typing in the amount and pressing enter
: Regional price comparison boxes were resized and placed correctly on store pages
: Fixed an alignment issue with bundle prices
: Fixed an issue where there was no preview popup on greenlight items loaded through continuous scrolling
: Dynamic Greenlight data will now be cached in the browser
: Astats and Steamgifts links will now force a non-SSL connection as those sites don't support SSL
: Fixed a bug that caused bundle notifications not to appear on non-English store pages

v7.9
-----
+ Added an option to sort your friends page by their time last online
+ Added input validation to "Edit Price" functionality on the market and support for comma decimal separators
: Adjusted for a layout change that caused links to SteamDB, SteamCardExchange, and PCGW not to show
: Adjusted for a layout change that broke the removal of games from your wishlist from their app page
: Adjusted for a layout change that caused the "No" button to remain present while editing an item's price
: Adjusted for a layout change that caused the "customize" buttons to be hidden on home and app pages
: Fixed a bug that caused quick and instant sell buttons to sometimes appear multiple times