@@ -236,7 +236,7 @@
 							<td><input type="checkbox" id="indiegalastore"><label for="indiegalastore">IndieGala Store</label></td>
 						</tr>
 						<tr>
-							<td><input type="checkbox" id="desura"><label for="desura">Desura</label></td>
+							<td><input type="checkbox" id="wingamestore"><label for="wingamestore">WinGameStore</label></td>
 							<td><input type="checkbox" id="gog"><label for="gog">GOG</label></td>
 							<td><input type="checkbox" id="humblestore"><label for="humblestore">Humble Store</label></td>
 						</tr>
@@ -271,7 +271,6 @@
 							<td><input type="checkbox" id="funstock"><label for="funstock">FunStock Digital</label></td>
 						</tr>
 						<tr>
-							<td><input type="checkbox" id="wingamestore"><label for="wingamestore">WinGameStore</label></td>
 							<td><input type="checkbox" id="gamebillet"><label for="gamebillet">GameBillet</label></td>
 						</tr>
 					</table>
